--- a/client/src/components/Admin/userdetails/userlist.css
+++ b/client/src/components/Admin/userdetails/userlist.css
@@ -1,10 +1,10 @@
 .user{
-    transform: translateY(50px);
+    transform: translateY(40px);
     text-align: center;
-}
-
-    
-    
+    color: white;
+   font-size: 20px;
+   font-weight: inherit;
+} 
 
 .users{
     transform: translateY(110px);
